# fakeweb

./: pyproject.toml
src/fakeweb/: api.py  event.py  server.py
