[project]
name = "fakeweb"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lisoboss", email = "37949544+lisoboss@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.hatch.version]
source = "vcs"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.bandit]
skips = ["B101"]
exclude_dirs = [".venv", "venv", "tests"]
